--- a/src/stories/gallery/DNALogos.mdx
+++ b/src/stories/gallery/DNALogos.mdx
@@ -1,7 +1,7 @@
 import { Canvas, Meta } from "@storybook/blocks";
 
-import * as DNALogos from "./DnaLogo.stories";
-import * as RawLogo from "./RawLogo.stories";
+import * as DNALogos from "../DnaLogo.stories";
+import * as RawLogo from "../components/RawLogo.stories";
 
 <Meta title="Gallery/DNA Logos" />
 
@@ -50,3 +50,4 @@ A DNA logo can be rendered without axes or labels.
 This logo shows the consensus DNA binding motif for CTCF, rendered without an x-axis or y-axis.
 
 <Canvas of={RawLogo.CTCF} />
+../components/RawLogo.stories
