add negative values guide

--- a/src/stories/gallery/ProteinLogos.mdx
+++ b/src/stories/gallery/ProteinLogos.mdx
@@ -2,13 +2,13 @@ import { Canvas, Meta } from "@storybook/blocks";
 
 import * as ProteinLogos from "../ProteinLogo.stories";
 
-<Meta title="Gallery/Protien Logos" />
+<Meta title="Gallery/Protein Logos" />
 
 # Protein Logos
 
 Logos using amino acid alphabets.
 
-## Default protein logo
+## Default Protein Logo
 
 **A default protein logo colors amino acids by chemical properties.**
 
