add bigwig example

--- a/src/stories/gallery/DNALogos.mdx
+++ b/src/stories/gallery/DNALogos.mdx
@@ -27,6 +27,14 @@ This logo shows the consensus DNA binding motif for CTCF. Here, the letter heigh
 
 <Canvas of={DNALogos.CTCFMotifFrequency} />
 
+## BigWigs
+
+**Raw values can be displayed to plot data from bigWigs or SHAP scores.**
+
+This plot shows SHAP importance scores from model attributions from a deep-learning model. The scores are plotted as a DNA logo, with the height of each letter corresponding to the importance of that base in the model's prediction.
+
+<Canvas of={DNALogos.Bigwig} />
+
 ## Custom Starting Base
 
 **A DNA logo can use a custom number for the first base.**
