--- a/stories/gallery/DNALogos.mdx
+++ b/stories/gallery/DNALogos.mdx
@@ -1,7 +1,7 @@
 import { Canvas, Meta } from "@storybook/blocks";
 
 import * as DNALogos from "../DnaLogo.stories";
-import * as RawLogo from "../components/RawLogo.stories";
+import * as PlainLogo from "../components/PlainLogo.stories";
 
 <Meta title="Gallery/DNA Logos" />
 
@@ -57,5 +57,4 @@ A DNA logo can be rendered without axes or labels.
 
 This logo shows the consensus DNA binding motif for CTCF, rendered without an x-axis or y-axis.
 
-<Canvas of={RawLogo.CTCF} />
-../components/RawLogo.stories
+<Canvas of={PlainLogo.CTCF} />
