add features to getting started docs

--- a/stories/gallery/DNALogos.mdx
+++ b/stories/gallery/DNALogos.mdx
@@ -58,3 +58,4 @@ A DNA logo can be rendered without axes or labels.
 This logo shows the consensus DNA binding motif for CTCF, rendered without an x-axis or y-axis.
 
 <Canvas of={PlainLogo.CTCF} />
+../logos/DnaLogo.stories
