--- a/stories/GettingStarted.mdx
+++ b/stories/GettingStarted.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta } from "@storybook/blocks";
 
-import * as DNALogos from "./DnaLogo.stories";
+import * as DNALogos from "./logos/DnaLogo.stories";
 
 <Meta title="Getting Started" />
 
@@ -8,17 +8,28 @@ import * as DNALogos from "./DnaLogo.stories";
 
 LogoMakerJS is a React component that renders sequence logos. It is highly customizable, allowing you to change colors, axes, labels to render logos for DNA, RNA or proteins. Logos are rendered as Scalable Vector Graphics (SVG) for high quality display on any device.
 
-## Using React
+## Features
+
+- **Many Supported Formats**: LogoMakerJS supports Position Probability Matrices (PPMs), Position Weight Matrices (PWMs), FASTAs and BigWig-like data.
+- **Display Options**: Display logos as frequency, information content, or raw values.
+- **Highly Customizable**: Customize colors, axes, labels, and more.
+- **Add Annotations**: Add annotations to your logos to highlight important features.
+
+See the [gallery](?path=/docs/gallery-dna-logos--docs) for examples of logos you can create with LogoMakerJS, read the `Logo` component [API documentation](?path=/docs/logo--docs) for more information on how to use the library, or read the tutorial to learn more.
+
+## Quick Start
+
+### Using React
 
 LogoMakerJS is available as an npm package. It has minimal dependencies, only requiring React.
 
-### Installation
+#### Installation
 
 ```
 npm install logomakerjs
 ```
 
-### Usage
+#### Usage
 
 ```jsx
 import { DNALogo } from "logomakerjs";
@@ -52,9 +63,9 @@ export const CTCFLogo = (props) => (
 
 <Canvas of={DNALogos.CTCFMotifFrequency} />
 
-## Using plain JavaScript
+### Using plain JavaScript
 
-### Installation
+#### Installation
 
 The LogoMakerJS library is also available as a standalone JavaScript file. You can include it in your HTML file using a script tag. You will need to include React and ReactDOM scripts earlier in the file.
 
@@ -73,11 +84,11 @@ The LogoMakerJS library is also available as a standalone JavaScript file. You c
 ></script>
 ```
 
-### Usage
+#### Usage
 
 The library exposes a global object `logomakerjs` that you can use to render logos. The following code embeds the DNA logo in a `div` element:
 
-```html
+````html
 <!doctype html>
 <html>
   <body>
@@ -124,4 +135,5 @@ The library exposes a global object `logomakerjs` that you can use to render log
     </script>
   </body>
 </html>
-```
+```./logos/DnaLogo.stories
+````
