update docs start adding tutorial

--- a/stories/gallery/DNALogos.mdx
+++ b/stories/gallery/DNALogos.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta } from "@storybook/blocks";
 
-import * as DNALogos from "../DnaLogo.stories";
+import * as DNALogos from "../logos/DnaLogo.stories";
 import * as PlainLogo from "../components/PlainLogo.stories";
 
 <Meta title="Gallery/DNA Logos" />
