--- a/stories/gallery/ExtendedAlphabets.mdx
+++ b/stories/gallery/ExtendedAlphabets.mdx
@@ -1,9 +1,9 @@
 import { Canvas, Meta } from "@storybook/blocks";
 
-import * as DNALogos from "../DnaLogo.stories";
-import * as ProteinLogos from "../ProteinLogo.stories";
-import * as Logos from "../Logo.stories";
-import * as RNALogos from "../RNALogo.stories";
+import * as DNALogos from "../logos/DnaLogo.stories";
+import * as ProteinLogos from "../logos/ProteinLogo.stories";
+import * as Logos from "../logos/Logo.stories";
+import * as RNALogos from "../logos/RNALogo.stories";
 
 <Meta title="Gallery/Extended Alphabets" />
 
