--- a/stories/gallery/NegativeValues.mdx
+++ b/stories/gallery/NegativeValues.mdx
@@ -1,7 +1,7 @@
 import { Canvas, Meta } from "@storybook/blocks";
 
-import * as ProteinLogos from "../ProteinLogo.stories";
-import * as DNALogos from "../DnaLogo.stories";
+import * as ProteinLogos from "../logos/ProteinLogo.stories";
+import * as DNALogos from "../logos/DnaLogo.stories";
 
 <Meta title="Gallery/Negative Values" />
 
