--- a/stories/gallery/ProteinLogos.mdx
+++ b/stories/gallery/ProteinLogos.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta } from "@storybook/blocks";
 
-import * as ProteinLogos from "../ProteinLogo.stories";
+import * as ProteinLogos from "../logos/ProteinLogo.stories";
 
 <Meta title="Gallery/Protein Logos" />
 
